# ADDS_EN

./: .dockerignore  .env.example  .env.template  .gitignore  BUILD_LITERATURE_DB.bat  CHANGELOG.md  Dockerfile  Dockerfile.gpu  EMERGENCY_RESTART_GPU.bat  LICENSE  README.md  START_ALL.bat  START_CLINICAL_SYSTEM.bat  START_EXTRACTION_MONITOR.bat  ct_literature_parameters.json  ct_pipeline_parameter_table.csv  ct_segvol_direct.json  deploy.ps1  deploy.sh  docker-compose.clinical.yml  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-ci.txt  run_clinical_validation.bat  run_validation.bat  run_with_nvidia.sh  start_backend.bat  start_system.ps1  start_ui.bat  test_viewer.html  test_viewer_backup.html  train_nnunet.ps1  validation_report.html  working_viewer.html
.github/: CODEOWNERS  CONTRIBUTING.md
.streamlit/: secrets.toml
CDS/: extract.py  extract_all.py  generate_ppt.py
annotations/: medsam_batch_annotations.json
backend/: README.md  config.py  database_init.py  gunicorn_config.py  main.py  main_organ_api.py  migrate_metadata_tables.py  test_api.py
config/: search_config.py
configs/: config.yaml  config.yaml.backup_20260110_100947  database_schema.sql  sota_combo_v2_fixed_config.yaml  sota_optimized_config.yaml  transfer_learning_config.yaml
docker/: README.md
docs/: ADDS_AUDIT_ROUND1.json  ADDS_AUDIT_ROUND3.json  ADDS_ENRICHMENT_RESULTS.json  ADDS_VERIFICATION_FINAL.json  ADDS_XAI_VERIFICATION_FINAL.json  ADDS_formal_disclosures.json  API_REFERENCE.md  ARCHITECTURE.md  AlphaFold3_Integration_Plan.md  CELLPOSE_ANALYSIS.md  CLINICAL_CDS.md  CRITICAL_MISSED_TUMOR_ANALYSIS.md  CT_DETECTION_ALGORITHM_EXPLAINED.md  CT_DETECTION_TUNING_SUCCESS.md  CT_PIPELINE.md  CUDA_SETUP.md  DRUG_SYNERGY.md  FINAL_SUMMARY.md  FULL_CT_SERIES_CLINICAL_REPORT.md  HIERARCHICAL_CT_ANALYSIS_RESULTS.md  INHA_COLLABORATION.md  INHA_CT_DATA_ASSESSMENT.md  INHA_CT_DETECTION_RESULTS.md  MEDSAM_BATCH_ANNOTATION_RESULTS.md  MEDSAM_SETUP_GUIDE.md  MEDSAM_WORKFLOW.md  MultiModal_Architecture_Design.md  PHARMACOKINETICS.md  PHASE1_COMPLETION_REPORT.md  PHASE2_PROGRESS.md  RealTime_Inference_Optimization.md  SETUP.md  SYSTEM_CHECK_PLAN.md  WEEKLY_PLAN.md  architecture_paper_part1_introduction.md  architecture_paper_part2_architecture.md  architecture_paper_part3_methods.md  architecture_paper_part5_conclusion.md  bliss_calibration_metadata.json  bliss_crossvalidation.json  (+18 more)
examples/: complete_pipeline.py
figures/: Fig1_Detail_Report.py  Fig1_KRAS_PrPc_concept.py  Fig1_KRAS_PrPc_summary.py  KRAS_PrPc_Research_Pipeline_Diagram.py  all5_variants.py  deepsynergy_performance_chart.py  energy_feature_3d_heatmap.py  feature_importance_panel_d.py  fig8A_simulated_phase2.py  fig8B_empirical_km_forest.py  fig_naturecomm_6panel.py  generate_adds_ai_report_figure.py  generate_phase2_figure8.py  generate_phase2_figure8_v13.py  generate_phase2_figure8_v3.py  generate_phase2_figure8_v4.py  generate_phase2_figure8_v5.py  (+44 more)
(+870 files in other folders)
